--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ title_separator: "-"
 subtitle: # site tagline that appears below site title in masthead
 name: "Elsayed El-Refaei"
 description: "Incident Response Engineer GREM"
-url: "ahmedhegazee.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl: "/xdefender" # the subpath of your site, e.g. "/blog"
+url: "ahmedhegazee.github.io/xdefender" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+baseurl: "" # the subpath of your site, e.g. "/blog"
 repository: "ahmedhegazee/ahmedhegazee.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: /assets/images/site_data/logo.webp # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
