--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ social:
 analytics:
   provider: "google-universal" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id:
+    tracking_id: "GTM-5RZHWSRX"
     anonymize_ip: # true, false (default)
 
 # Site Author
