--- a/_config.yml
+++ b/_config.yml
@@ -119,13 +119,13 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      # url:
+      url: "https://x.com/elsayed0x90"
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      # url:
+      url: "https://www.linkedin.com/in/root-kit00"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      # url:
+      url: "https://github.com/x-Defender"
     - label: "GitLab"
       icon: "fab fa-fw fa-gitlab"
       # url:
